praxis/kubernetes/apps/jupiter/requestauthentication.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: jupiter
  namespace: jupiter
spec:
  selector:
    matchLabels:
      app: jupiter
  jwtRules:
  - issuer: "http://keycloak-service.keycloak.svc/realms/nebhis"
    jwksUri: "http://keycloak-service.keycloak.svc/realms/nebhis/protocol/openid-connect/certs"
