praxis/kubernetes/apps/jupiter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupiter
  namespace: jupiter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupiter
  template:
    metadata:
      labels:
        app: jupiter
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
