praxis/kubernetes/apps/jupiter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupiter
  namespace: jupiter
spec:
  selector:
    app: jupiter
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
