praxis/kubernetes/apps/jupiter/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jupiter
  namespace: jupiter
spec:
  gateways:
  - jupiter/jupiter
  hosts:
  - jupiter.nebhis.lcl
  http:
    - route:
        - destination:
            host: jupiter
            port:
              number: 8080
