praxis/kubernetes/apps/jupiter/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: jupiter
  namespace: jupiter
spec:
  selector:
    matchLabels:
      app: jupiter
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
    when:
      - key: request.auth.claims[iss]
        values: ["http://keycloak-service.keycloak.svc/realms/nebhis"]
